--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "django (>=5.2.7,<6.0.0)"
+    "django (>=5.2.7,<6.0.0)",
+    "djangorestframework (>=3.15.2,<4.0.0)"
 ]
 
 [tool.poetry]
