--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django (>=5.2.7,<6.0.0)",
-    "djangorestframework (>=3.15.2,<4.0.0)"
+    "djangorestframework (>=3.15.2,<4.0.0)",
+    "django-cors-headers (>=4.4.0,<5.0.0)"
 ]
 
 [tool.poetry]
